--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,10 +41,16 @@ dependencies:
   flutter_bloc: ^9.1.1
   go_router: ^16.2.4
   cached_network_image: ^3.4.1
+  carousel_slider: ^5.1.1
+  skeletonizer: ^1.4.3
+  get_it: ^8.2.0
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  mockito: ^5.5.1
+  build_runner: ^2.10.1  
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
