--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,8 @@ dependencies:
   go_router: ^16.2.4
   cached_network_image: ^3.4.1
   carousel_slider: ^5.1.1
-  skeletonizer: ^1.4.3
+  skeletonizer: ^2.1.0+1
+
   get_it: ^8.2.0
   
 
